Test/test0/WhereParsing1.bpl.expect
WhereParsing1.bpl(16,27): error: ")" expected
1 parse errors detected in WhereParsing1.bpl
